2004-03-02  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Fixed feDiffuseLighting and feSpecular lighting for small
	kernel length
	
2004-03-02  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Added new filters: feDiffuseLighting and feSpecular lighting
	
2004-02-29  Dom Lachowicz <cinamod@hotmail.com>

	* moz-plugin/moz-plugin.c: Make Netscape/Mozilla plugin kind-of work
	
2004-02-29  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in:
	* Makefile.am:
	* test-display.c: Build + install 'rsvg-view'
	* rsvg-file-util.c:
	* rsvg-private.h: Export some things that I need in order to build rsvg-view
	
2004-02-29  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Added new filter: feImage
	
2004-02-29  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Added new filter: feTurbulence
	
2004-03-01  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Implemented bi-linear filtering for displacement
	map. The algorithm is still pretty crap but it makes it look a lot
	better than it did before.
	
2004-02-29  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Added new filter: feDisplacementMap
	
2004-02-28  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-text.c: Made standard text the default. Vector text was 
	annoying me.
	* rsvg-filter.c: Fixed a segfault in feComponentTransfer

2004-02-28  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: made filters render before opacity is taken care of, 
	this seems like the official way it is done
	* rsvg-filter.c: fixed a few problem with coordinate units and 
	dimentions
	
2004-02-27  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: implemented the "enable-background" style value.
	This allows backgrounds to be used by filters even when they are
	are based on multiple opacity levels. It also allows one to specify
	exactly how many levels of groups one wants to be included in the 
	background.

2004-02-19  Caleb Moore <c.moore@student.unsw.edu.au>
